--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
 
-header { background: #333; color: white; padding: 1rem 0; text-align: center; }
+#header {   width: 100%; 
+            height: 100vh;
+            background-image: url(images/IMG_1132.JPEG);
+            background-size: cover;
+            background-position: cover; 
+            color: white;
+            padding: 1rem 0; 
+            text-align: center; 
+        }
        
 nav { background: #555; padding: 0.5rem; text-align: center; }
 
@@ -10,4 +18,3 @@ main { padding: 2rem; max-width: 800px; margin: auto; }
 
 footer { background: #333; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
 
-   
