--- a/style.css
+++ b/style.css
@@ -2,19 +2,151 @@ body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; 
 
 #header {   width: 100%; 
             height: 100vh;
-            background-image: url(images/IMG_1132.JPEG);
+            /*background-image: url(images/IMG_1132.JPEG);*/
+            background-color: black;
             background-size: cover;
             background-position: cover; 
             color: white;
             padding: 1rem 0; 
             text-align: center; 
         }
+
+    .container{
+        padding: 10px 10%;
+    }
+    
        
-nav { background: #555; padding: 0.5rem; text-align: center; }
+nav { 
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: black;
+ }
+ .logo{
+    width: 140px;
+ }
 
-nav a { color: white; margin: 0 1rem; text-decoration: none; }
+ nav ul{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+ }
 
-main { padding: 2rem; max-width: 800px; margin: auto; }
+ nav a{
+    padding: 2px;
+    color: white;
+    left: 16px;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
 
+ }
+
+ nav a::after{
+    content: '';
+    width:0;
+    height: 3px;
+    background:rgb(236, 6, 6);
+    position:absolute;
+    left:0;
+    bottom:-6px;
+    transition:0.5s;
+ }
+ nav a:hover::after{
+    width:100%
+ }
+
+ .header-text{
+    margin-top: 20%;
+    font-size: 30px;
+
+ }
+ .header-text h1{
+    font-size: 60px;
+    margin-top: 20px;
+ }
+ .header-text h1 span{
+    color: red;
+ }
+ #about{
+    padding: 80px 0;
+    color:gray;
+ }
+ .row{
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color:black;
+ }
+ .about-col-1{
+    flex-basis: 35%;
+
+ }
+ .about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+ }
+ .about-col-2{
+    flex-basis: 60%;
+ }
+ .sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: white;
+ }
+ .about-col-2 p{
+    color: white;
+ }
+
+ .tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+ }
+ .tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+ }
+ .tab-links::after{
+    content: '';
+    width: 0%;
+    height: 3px;
+    background:rgb(236, 6, 6);
+    position:absolute;
+    left:0;
+    bottom:-6px;
+    transition:0.5s;
+ }
+ .tab-links.active-link::after{
+    width: 50%;
+ }
+.tab-contents ul li{
+    list-style:none;
+    color: white;
+    margin: 10px 0;
+
+}
+.tab-contents ul li span{
+    color: rgb(255, 0, 0);
+    font-size:14px;
+}
+.tab-contents ol li span{
+    color: rgb(255, 0, 0);
+    font-size:14px;
+}
+
+.tab-contents{
+    display: none;
+    margin-top: 20px;
+    color: white;
+}
+.tab-contents.active-tab{
+    display: block;
+
+}
 footer { background: #333; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
 
