--- a/style.css
+++ b/style.css
@@ -153,6 +153,41 @@ body{
 
 }
 
+.download-cv {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 10px;
+   background: linear-gradient(135deg, #d30000, #4f555a);
+   border-radius: 8px;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   width: fit-content;
+   margin: 20px auto;
+   transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.download-cv a {
+   text-decoration: none;
+   color: #fff;
+   font-weight: bold;
+   font-size: 16px;
+   padding: 12px 20px;
+   border-radius: 5px;
+   background-color: rgba(255, 255, 255, 0.2);
+   backdrop-filter: blur(5px);
+   transition: background 0.3s ease, color 0.3s ease;
+}
+
+.download-cv:hover {
+   transform: translateY(-2px);
+   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.download-cv a:hover {
+   background-color: rgba(255, 255, 255, 0.3);
+   color: #ffeb3b;
+}
+
 /*-----------------services------------------*/
 #services{
     padding: 30px 0;
@@ -209,11 +244,12 @@ body{
 /*-------------portfolio--------------*/
 #portfolio{
    padding: 50px 0;
+   width: 100%;
 
 }
 .work-list{
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
 }
@@ -278,7 +314,7 @@ body{
 }
 #contact {
    padding: 50px 0;
-   background: linear-gradient(to right, #1e1e1e, #333);
+   background: linear-gradient(to right, #000000, #000000);
    color: white;
    text-align: center;
 }
