--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body{
  }
  .about-col-1 img{
     width: 100%;
-    border-radius: 15px;
+    border-radius: 50%;
  }
  .about-col-2{
     flex-basis: 60%;
